force-app/main/default/objects/TwitchUser__c/TwitchUser__c.object-meta.xml
<CustomObject>
    <description>Object representing a Twitch broadcaster</description>
    <label>Twitch User</label>
    <nameField>
        <label>Twitch User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitch Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>