force-app/main/default/objects/TwitchUser__c/fields/BroadcasterType__c.field-meta.xml
<CustomField>
    <fullName>BroadcasterType__c</fullName>
    <label>Broadcaster Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>