force-app/main/default/objects/TwitchUser__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <description>Display Name of the twitch broadcaster</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>