force-app/main/default/objects/TwitchUser__c/fields/LogoUrl__c.field-meta.xml
<CustomField>
    <fullName>LogoUrl__c</fullName>
    <label>Logo Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>