force-app/main/default/objects/TwitchUser__c/fields/OfflineLogoUrl__c.field-meta.xml
<CustomField>
    <fullName>OfflineLogoUrl__c</fullName>
    <label>Offline Logo Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>