force-app/main/default/objects/TwitchUser__c/fields/TwitchId__c.field-meta.xml
<CustomField>
    <fullName>TwitchId__c</fullName>
    <description>Id of the Twitch Broadcaster</description>
    <externalId>true</externalId>
    <label>TwitchId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>