force-app/main/default/objects/TwitchUser__c/fields/ViewCount__c.field-meta.xml
<CustomField>
    <fullName>ViewCount__c</fullName>
    <label>View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>